# crab

./: .pre-commit-config.yaml  Development.md  pyproject.toml  run-mypy.sh
src/crab/cli/: __init__.py
src/crab/core/: __init__.py  config.py  template.py
src/crab/data/templates/basic/{{ project_name }}/: pyproject.toml.j2
src/crab/integrations/: uv.py
tests/: conftest.py  test_cli.py  test_config.py  test_template.py
