[project]
name = "crab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "isort>=6.0.0",
    "mypy>=1.14.1",
    "ruff>=0.9.4",
    "uv>=0.5.26",
]

[dependency-groups]
dev = [
    "isort>=6.0.0",
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
]
