[project]
name = "crab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "isort>=6.0.0",
    "jinja2>=3.1.5",
    "mypy>=1.14.1",
    "pydantic>=2.10.6",
    "ruff>=0.9.4",
    "toml>=0.10.2",
    "tomli>=2.2.1",
    "typer>=0.15.1",
    "uv>=0.5.26",
]

[project.scripts]
crab = "crab.cli:app"

[dependency-groups]
dev = ["isort>=6.0.0", "mypy>=1.14.1", "pre-commit>=4.1.0", "ruff>=0.9.4"]


[tool.pylint]
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
    "R0903", # Too few public methods
    "W0718", # Wide exception clause
    "W0621", # Redefining name %r from outer scope
]
